--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,3 +2,8 @@
 	height: 150px;
 	width: auto !important;
 }
+
+.products-checkbox {
+	margin-right: 0.7em !important;
+	vertical-align: text-top;
+}
