--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,61 +27,59 @@
 		</section><!--/slider-->
 
 		<section>
-			<div class="container">
-				<div class="row">
+			<div class="row">
 
-					<div class="col-sm-3" id="categories">
-						<div class="left-sidebar">
-							
-							<h2>Categorías</h2>
-							<div class="panel-group category-products"><!--category-productsr-->
-								<div ng-repeat="category in categories" class="panel panel-default">
-									<div class="panel-heading">
-										<h4 class="panel-title"><a ng-href="/category/{{category.id}}">{{category.title}}</a></h4>
-									</div>
+				<div class="col-sm-3" id="categories">
+					<div class="left-sidebar">
+						
+						<h2>Categorías</h2>
+						<div class="panel-group category-products"><!--category-productsr-->
+							<div ng-repeat="category in categories" class="panel panel-default">
+								<div class="panel-heading">
+									<h4 class="panel-title"><a ng-href="#/products?category={{category.id}}">{{category.title}}</a></h4>
 								</div>
-							</div><!--/category-products-->
-							
-							<h2>Marcas</h2>
-							<div class="panel-group category-products"><!--brand-productsr-->
-								<div ng-repeat="brand in brands" class="panel panel-default">
-									<div class="panel-heading">
-										<h4 class="panel-title"><a ng-href="/category/{{brand.id}}">{{brand.title}}</a></h4>
-									</div>
+							</div>
+						</div><!--/category-products-->
+						
+						<h2>Marcas</h2>
+						<div class="panel-group category-products"><!--brand-productsr-->
+							<div ng-repeat="brand in brands" class="panel panel-default">
+								<div class="panel-heading">
+									<h4 class="panel-title"><a ng-href="#/products?brand={{brand.id}}">{{brand.title}}</a></h4>
 								</div>
-							</div><!--/brand-products-->
+							</div>
+						</div><!--/brand-products-->
 
-						</div>
 					</div>
-					
-					<div class="col-sm-9 padding-right">
-						<div class="features_items"><!--features_items-->
-							<h2 class="title text-center">Nuevos</h2>
+				</div>
+				
+				<div class="col-sm-9 padding-right">
+					<div class="features_items"><!--features_items-->
+						<h2 class="title text-center">Nuevos</h2>
 
-							<div class="col-sm-4" ng-repeat="product in products">
-								<div class="product-image-wrapper">
-									<div class="single-products">
-										<div class="productinfo text-center">
-											<img class="main-product" ng-src="{{product.images[0].url.https}}" alt="{{product.title}}" />
+						<div class="col-sm-4" ng-repeat="product in products">
+							<div class="product-image-wrapper">
+								<div class="single-products">
+									<div class="productinfo text-center">
+										<img class="main-product" ng-src="{{product.images[0].url.https}}" alt="{{product.title}}" />
+										<h2>{{product.price.data.formatted.without_tax}}</h2>
+										<p>{{product.title}}</p>
+										<a ng-href="#/product/{{product.id}}" class="btn btn-default add-to-cart"><i class="fa fa-eye"></i>Ver más</a>
+									</div>
+									<div class="product-overlay">
+										<div class="overlay-content">
 											<h2>{{product.price.data.formatted.without_tax}}</h2>
 											<p>{{product.title}}</p>
 											<a ng-href="#/product/{{product.id}}" class="btn btn-default add-to-cart"><i class="fa fa-eye"></i>Ver más</a>
 										</div>
-										<div class="product-overlay">
-											<div class="overlay-content">
-												<h2>{{product.price.data.formatted.without_tax}}</h2>
-												<p>{{product.title}}</p>
-												<a ng-href="#/product/{{product.id}}" class="btn btn-default add-to-cart"><i class="fa fa-eye"></i>Ver más</a>
-											</div>
-										</div>
-										<img src="images/home/new.png" class="new" alt="New" />
-										<!-- <img src="images/home/sale.png" class="new" alt="Sale" /> -->
 									</div>
+									<img src="images/home/new.png" class="new" alt="New" />
+									<!-- <img src="images/home/sale.png" class="new" alt="Sale" /> -->
 								</div>
 							</div>
-							
-						</div><!--features_items-->		
-					</div>
+						</div>
+						
+					</div><!--features_items-->		
 				</div>
 			</div>
 		</section>
