--- a/app/styles/eshopper/main.css
+++ b/app/styles/eshopper/main.css
@@ -68,7 +68,7 @@ a#scrollUp i{
 **************************/
 
 .header_top {
-  background: none repeat scroll 0 0 #F0F0E9;
+  background: none repeat scroll 0 0 rgb(254, 152, 15);;
 }
 
 .contactinfo ul li:first-child{
@@ -90,7 +90,7 @@ a#scrollUp i{
 .social-icons ul li a {
   border: 0 none;
   border-radius: 0;
-  color: #696763;
+  color: #fff;
   padding:0px;
 }
 
@@ -141,7 +141,7 @@ a#scrollUp i{
 }
 
 .header-middle .container .row {
-  border-bottom: 1px solid #f5f5f5;
+  border-bottom: 1px solid #F0F0E9;
   margin-left: 0;
   margin-right: 0;
   padding-bottom: 20px;
@@ -220,7 +220,6 @@ a#scrollUp i{
 
 .shop-menu ul li a:hover {
 	color:#fe980f;
-	background:#fff;
 }
 
 
@@ -266,10 +265,10 @@ a#scrollUp i{
   height: 35px;
   outline: medium none;
   padding-left: 10px;
-  width: 155px;
+  width: 255px;
   background-image: url(../../images/home/searchicon.png);
   background-repeat: no-repeat;
-  background-position: 130px;
+  background-position: 230px;
 }
 
 
@@ -370,7 +369,7 @@ ul.sub-menu {
   text-transform: uppercase;
 }
 
-.companyinfo h2  span{
+.companyinfo h2 span{
   color:#FE980F;
 }
 
