--- a/app/views/products.html
+++ b/app/views/products.html
@@ -4,14 +4,21 @@
 		<section>
 			<div class="row">
 
-					<div class="col-sm-3" id="categories">
+					<div class="col-sm-4" id="categories">
 						<div class="left-sidebar">
 						
 						<h2>Categorías</h2>
 						<div class="panel-group category-products"><!--category-productsr-->
 							<div ng-repeat="category in categories" class="panel panel-default">
 								<div class="panel-heading">
-									<h4 class="panel-title"><input class="products-checkbox" type="checkbox"><a>{{category.title}}</a></h4>
+									<h4 class="panel-title">
+										<input ng-model="selectedCategories[category.id]" 
+													 id="{{category.id}}" 
+													 class="products-checkbox" 
+													 type="checkbox"
+													 ng-change="filterItems()">
+										<a>{{category.title}}</a>
+									</h4>
 								</div>
 							</div>
 						</div><!--/category-products-->
@@ -20,13 +27,20 @@
 						<div class="panel-group category-products"><!--brand-productsr-->
 							<div ng-repeat="brand in brands" class="panel panel-default">
 								<div class="panel-heading">
-									<h4 class="panel-title"><input class="products-checkbox" type="checkbox"><a>{{brand.title}}</a></h4>
+									<h4 class="panel-title">
+										<input ng-model="selectedBrands[brand.id]"
+													 id="{{brand.id}}"
+													 class="products-checkbox" 
+													 type="checkbox"
+													 ng-change="filterItems()">
+										<a>{{brand.title}}</a>
+									</h4>
 								</div>
 							</div>
 						</div><!--/brand-products-->
 
 						<div class="price-range"><!--price-range-->
-							<h2>Price Range</h2>
+							<h2>Precio</h2>
 							<div class="well text-center">
 								 <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="30000" data-slider-step="5" data-slider-value="[0,10000]" id="products-range" ><br />
 								 <b class="pull-left">$0</b><b class="pull-right">$30,000</b>
@@ -35,7 +49,7 @@
 					</div>
 				</div>
 				
-				<div class="col-sm-9 padding-right">
+				<div class="col-sm-8 padding-right">
 					<div class="features_items"><!--features_items-->
 						<h2 class="title text-center">Productos</h2>
 
