Added add to card

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,6 +10,10 @@
 	width: auto !important;
 }
 
+.view-more {
+  margin-bottom: 10px !important;
+}
+
 .products-checkbox {
 	margin-right: 0.2em !important;
 }
